force-app/main/default/objects/Loyalty_Card__c/Loyalty_Card__c.object-meta.xml
<CustomObject>
    <label>Loyalty Card</label>
    <nameField>
        <displayFormat>LoyaltyCard-{0000}</displayFormat>
        <label>Loyalty Card Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loyalty Cards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>