force-app/main/default/objects/Loyalty_Card__c/fields/Date_of_E_Club_purchase__c.field-meta.xml
<CustomField>
    <fullName>Date_of_E_Club_purchase__c</fullName>
    <label>Date of E-Club purchase</label>
    <type>Date</type>
</CustomField>