force-app/main/default/objects/Loyalty_Card__c/fields/E_Club_Automatic_Renewal__c.field-meta.xml
<CustomField>
    <fullName>E_Club_Automatic_Renewal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>E-Club Automatic Renewal</label>
    <type>Checkbox</type>
</CustomField>