force-app/main/default/objects/Loyalty_Card__c/fields/E_Club_Card_Number__c.field-meta.xml
<CustomField>
    <fullName>E_Club_Card_Number__c</fullName>
    <label>E-Club Card Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>