force-app/main/default/objects/Loyalty_Card__c/fields/E_Club_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>E_Club_Country_Code__c</fullName>
    <label>E-Club Country Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>