force-app/main/default/objects/Loyalty_Card__c/fields/E_Club_Creation_Channel__c.field-meta.xml
<CustomField>
    <fullName>E_Club_Creation_Channel__c</fullName>
    <label>E-Club Creation Channel</label>
    <length>25</length>
    <type>Text</type>
</CustomField>