force-app/main/default/objects/Loyalty_Card__c/fields/E_Club_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>E_Club_Expiration_Date__c</fullName>
    <label>E-Club Expiration Date</label>
    <type>Date</type>
</CustomField>