force-app/main/default/objects/Loyalty_Card__c/fields/E_Club_Initial_Subscription_Date__c.field-meta.xml
<CustomField>
    <fullName>E_Club_Initial_Subscription_Date__c</fullName>
    <label>E-Club Initial Subscription Date</label>
    <type>Date</type>
</CustomField>