force-app/main/default/objects/Loyalty_Card__c/fields/E_Club_Renewal_Period_End_Date__c.field-meta.xml
<CustomField>
    <fullName>E_Club_Renewal_Period_End_Date__c</fullName>
    <label>E-Club Renewal Period End Date</label>
    <type>Date</type>
</CustomField>