force-app/main/default/objects/Loyalty_Card__c/fields/E_Club_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>E_Club_Start_Date__c</fullName>
    <label>E-Club Start Date</label>
    <type>Date</type>
</CustomField>