force-app/main/default/objects/Loyalty_Card__c/fields/Payment__c.field-meta.xml
<CustomField>
    <fullName>Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment</label>
    <referenceTo>Payment__c</referenceTo>
    <relationshipLabel>Loyalty Cards</relationshipLabel>
    <relationshipName>Loyalty_Cards</relationshipName>
    <type>Lookup</type>
</CustomField>