force-app/main/default/objects/Loyalty_Card__c/fields/Person_Account__c.field-meta.xml
<CustomField>
    <fullName>Person_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Person Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Loyalty Cards</relationshipLabel>
    <relationshipName>Loyalty_Cards</relationshipName>
    <type>Lookup</type>
</CustomField>